# PuffinEngine

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  CMakeListsLib.txt.in  README.md  imgui.ini  linux64debug.sh  linux64release.sh  main.cpp  win64debug.bat  win64release.bat
puffinEngine/cmake/: CMakeListsBOOST.txt.in  CMakeListsSTB.txt.in  build3rdParty.txt
puffinEngine/fonts/: stb_font_consolas_24_latin1.inl
puffinEngine/headers/: Actor.hpp  Buffer.hpp  Camera.hpp  Character.hpp  Device.hpp  ErrorCheck.hpp  GuiMainHub.hpp  GuiMainUi.hpp  GuiTextOverlay.hpp  Landscape.hpp  Light.hpp  Log.hpp  MainCharacter.hpp  MaterialLibrary.hpp  MeshLibrary.hpp  PuffinEngine.hpp  PushConstant.hpp  RenderPass.cpp  RenderPass.hpp  Scene.hpp  SwapChain.hpp  Texture.hpp  Threads.hpp  Ui.hpp  WorldClock.hpp
puffinEngine/imgui/: CMakeLists.txt
puffinEngine/shaders/: aabbShader.frag  aabbShader.frag.spv  aabbShader.vert  aabbShader.vert.spv  clouds_shader.frag  clouds_shader.frag.spv  clouds_shader.vert  clouds_shader.vert.spv  compile.bat  compile.sh  imgui_menu_shader.frag  imgui_menu_shader.frag.spv  imgui_menu_shader.vert  imgui_menu_shader.vert.spv  lineShader.vert  lineShader.vert.spv  ocean_shader.frag  ocean_shader.frag.spv  ocean_shader.vert  ocean_shader.vert.spv  pbr_shader.frag  pbr_shader.frag.spv  pbr_shader.vert  pbr_shader.vert.spv  perform_stats.frag  perform_stats.frag.spv  perform_stats.vert  selectionCrystalShader.frag  selectionCrystalShader.frag.spv  selectionCrystalShader.vert  selectionCrystalShader.vert.spv  skymap_shader.frag  skymap_shader.frag.spv  skymap_shader.vert  skymap_shader.vert.spv  uiBackgroundShader.frag  uiBackgroundShader.frag.spv  uiBackgroundShader.vert  uiBackgroundShader.vert.spv  uiImageShader.frag  (+6 more)
puffinEngine/src/: Actor.cpp  Actor.hpp  Buffer.cpp  Buffer.hpp  Camera.cpp  Camera.hpp  Character.cpp  Character.hpp  Controller.cpp  Controller.hpp  Device.cpp  Device.hpp  ErrorCheck.cpp  ErrorCheck.hpp  GuiMainHub.cpp  GuiMainHub.hpp  GuiMainUi.cpp  GuiMainUi.hpp  GuiOverlay.cpp  GuiOverlay.hpp  GuiTextOverlay.cpp  GuiTextOverlay.hpp  Landscape.cpp  Landscape.hpp  Light.cpp  Light.hpp  LoadFile.cpp  LoadMesh.cpp  LoadTexture.cpp  Log.cpp  MainCharacter.cpp  MainCharacter.hpp  MaterialLibrary.cpp  MaterialLibrary.hpp  MeshLayout.cpp  MeshLibrary.cpp  MeshLibrary.hpp  MousePicker.cpp  MousePicker.hpp  PuffinEngine.cpp  (+16 more)
puffinEngine/src/CharacterObserver/: Observer.cpp  Quest.cpp
puffinEngine/src/Item/: Item.cpp  Item.hpp  Money.cpp  Money.hpp  Weapon.cpp  Weapon.hpp
tests/: BufferTest.cpp  BufferTest.hpp  CMakeLists.txt  CMakeListsGTest.txt.in  PuffinEngineTest.cpp  PuffinEngineTest.hpp  main.cpp
